--- a/KingGameServer/config/SocketHandlerConfig.properties
+++ b/KingGameServer/config/SocketHandlerConfig.properties
@@ -5,3 +5,4 @@
 1003=client.msg.received.JoinPKMessageReceived1003
 1004=client.msg.received.StartGamePKMessageReceived1004
 1005=client.msg.received.EndGamePKMessageReceived1005
+1006=client.msg.received.NormalLeavePKMessageReceived1006
