--- a/KingGameServer/config/SocketHandlerConfig.properties
+++ b/KingGameServer/config/SocketHandlerConfig.properties
@@ -6,3 +6,4 @@
 1004=client.msg.received.StartGamePKMessageReceived1004
 1005=client.msg.received.EndGamePKMessageReceived1005
 1006=client.msg.received.NormalLeavePKMessageReceived1006
+1007=client.msg.received.ForceLeavePKMessageReceived1007
