添加心跳包机制

--- a/KingGameServer/config/SocketHandlerConfig.properties
+++ b/KingGameServer/config/SocketHandlerConfig.properties
@@ -1,5 +1,6 @@
 1=client.msg.received.HeartBeatMessage
 
+1000=client.msg.received.HeartMessageReceived1000
 1001=client.msg.received.LoginMessage1001
 1002=client.msg.received.CreatePKMessageReceived1002
 1003=client.msg.received.JoinPKMessageReceived1003
