修改显示余额不足 ，更新ip

--- a/KingGameServer/config/SocketHandlerConfig.properties
+++ b/KingGameServer/config/SocketHandlerConfig.properties
@@ -8,3 +8,4 @@
 1005=client.msg.received.EndGamePKMessageReceived1005
 1006=client.msg.received.NormalLeavePKMessageReceived1006
 1007=client.msg.received.ForceLeavePKMessageReceived1007
+1008=client.msg.received.SizeofMessageReceived1008
